--- a/packages/shell/app/scripts/components/mapper/frame/frame-editor.css
+++ b/packages/shell/app/scripts/components/mapper/frame/frame-editor.css
@@ -1,5 +1,4 @@
 :host {
-  display: block;
   position: relative;
   box-sizing: border-box;
 
@@ -13,9 +12,14 @@
 
 :host > * { grid-area: 1 / 1 / -1 / -1; }
 
-canvas {
-  display: block;
-  background-color: rgb(0 0 0 / 1);
+svg { display: block; }
+
+path, circle {
+  stroke: var(--frame-color);
+  stroke-width: 2px;
+  fill: transparent;
 }
 
-
+.active {
+  stroke: var(--active-color);
+}
