--- a/packages/shell/app/scripts/components/mapper/frame/dialog-texture.css
+++ b/packages/shell/app/scripts/components/mapper/frame/dialog-texture.css
@@ -1,6 +1,41 @@
 section {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  display: grid;
+  grid-template-columns: min-content 30px auto;
   gap: var(--gap);
+  max-width: 700px;
+  min-width: 700px;
+}
+
+video, img {
+  grid-area: 2 / 1 / span 1 / -1 ;
+  display: none;
+  box-sizing: content-box;
+  grid-column: 1 / -1 ;
+
+  width: 100%;
+  aspect-ratio: 16 / 9;
+  border: 1px solid rgb(36 41 47 / 1);
+
+  object-fit: contain;
+}
+
+.active {
+  display: block;
+}
+
+#selector {
+  grid-area: 2 / 1 / span 1 / -1 ;
+  display: flex;
+  justify-content: stretch;
+  align-items: stretch;
+}
+
+#selector > span {
+  display: grid;
+  flex: 1 0 auto;
+  border: 1px solid var(--active-color);
+}
+
+#selector > span:hover {
+  background-color: rgb(200 50 50 / .5);
 }
