--- a/packages/shell/app/scripts/components/mapper/frame/frame-editor.css
+++ b/packages/shell/app/scripts/components/mapper/frame/frame-editor.css
@@ -23,3 +23,10 @@ path, circle {
 .active {
   stroke: var(--active-color);
 }
+
+text {
+  fill: rgb( 255 255 255 / .89);
+  font-size: 36px;
+  font-weight: 500;
+  text-shadow: 0 0 1px rgb(0 0 0 / .89);
+}
