--- a/packages/shell/app/scripts/components/mapper/frame/dialog-texture.css
+++ b/packages/shell/app/scripts/components/mapper/frame/dialog-texture.css
@@ -1,4 +1,5 @@
 section {
+  position: relative;
   display: grid;
   grid-template-columns: min-content 30px auto;
   gap: var(--gap);
@@ -7,6 +8,7 @@ section {
 }
 
 video, img {
+  position: relative;
   grid-area: 2 / 1 / span 1 / -1 ;
   display: none;
   box-sizing: content-box;
@@ -24,6 +26,7 @@ video, img {
 }
 
 #selector {
+  position: relative;
   grid-area: 2 / 1 / span 1 / -1 ;
   display: flex;
   justify-content: stretch;
@@ -31,6 +34,7 @@ video, img {
 }
 
 #selector > span {
+  position: relative;
   display: grid;
   flex: 1 0 auto;
   border: 1px solid var(--active-color);
